--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@master
         
       - name: Run GitHub Super Linter
-        uses: github/super-linter@master
+        uses: github/super-linter@main
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
